--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.15"
+  },
+  "devDependencies": {
+    "json-server": "^1.0.0-beta.3"
   }
 }
